--- a/styles/main.css
+++ b/styles/main.css
@@ -88,6 +88,14 @@
 
 .game-board {
   width: 600px;
-  height: 600px;
+  height: 640px;
   border: 3px solid #3e1a5c;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+  font-family: 'Press Start 2P', cursive;
+  margin: 0 10px;
+  font-size: 20px;
 }
