removed click start after game start

--- a/styles/main.css
+++ b/styles/main.css
@@ -99,3 +99,12 @@
   margin: 0 10px;
   font-size: 20px;
 }
+
+/* .intro {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 18px;
+  position: absolute;
+  top: 57%;
+  left: 25%;
+  color: yellow;
+} */
