--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ audio {
 .body-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 65%;
   margin: 0 auto;
   height: auto;
